[metadata]
name = leeteasy
version = 0.1.2
author = Sudipto Baral
author_email = sudiptobaral.me@gmail.com
description = Desktop notification of easy daily challenge of leetcode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudiptob2/leet-easy

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Terminals

[options]
package_dir =
    leeteasy=leeteasy
packages = find_namespace:
python_requires = >=3.10
include_package_data = True

install_requires =
    attrs==22.1.0
    certifi==2022.9.24
    charset-normalizer==2.1.1
    click==8.1.3
    idna==3.4
    iniconfig==1.1.1
    jeepney==0.8.0
    loguru==0.5.3
    mccabe==0.7.0
    notify-py==0.3.3
    packaging==21.3
    pluggy==1.0.0
    py==1.11.0
    pycodestyle==2.9.1
    pyflakes==2.5.0
    pyparsing==3.0.9
    requests==2.28.1
    schedule==1.1.0
    tomli==2.0.1
    urllib3==1.26.12

[options.packages.find]
where =

exclude =
    tests
    tests.*
    docs
    docs.*

[flake8]
max-line-length = 99

console_scripts =
    leeteasy = leeteasy.__main__:main