[metadata]
name = leeteasy
version = 1.0.0
author = Sudipto Baral
author_email = sudiptobaral.me@gmail.com
description = Desktop notification of easy daily challenge of leetcode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudiptob2/leet-easy

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Terminals

[options]
package_dir =
    leeteasy=leeteasy
packages = find_namespace:
python_requires = >=3.8
include_package_data = True

install_requires =
    click==8.1.3
    idna==3.4
    notify-py==0.3.3
    requests==2.28.1
    schedule==1.1.0

[options.packages.find]
where =

exclude =
    tests
    tests.*
    docs
    docs.*

[flake8]
max-line-length = 99

console_scripts =
    leeteasy = leeteasy.__main__:main