[metadata]
name = leeteasy
version = 1.0.2
author = Sudipto Baral
author_email = sudiptobaral.me@gmail.com
description = Desktop notification of easy daily challenge of leetcode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudiptob2/leet-easy

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Terminals

[options]
package_dir =
    leeteasy=leeteasy
packages = find_namespace:
python_requires = >=3.8
include_package_data = True

install_requires =
    click==8.1.3
    idna==3.4
    notify-py==0.3.3
    requests==2.28.1
    schedule==1.1.0

[options.packages.find]
where =

exclude =
    tests
    tests.*
    docs
    docs.*

[flake8]
# flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
max-line-length = 99
max-complexity = 6
format = wemake
show-source = True
statistics = True
doctests = True
enable-extensions = G

# Excluding some directories:
exclude = .git,__pycache__,.venv,.eggs,*.egg, tests

# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long
docstring-style = numpy

# Disable some checks:
ignore =
    D100,
    S605,
    S607,
    WPS115,
    WPS306,
    D104,
    WPS201, # Found module with too many imports
    WPS229, # Found too long try body length



[mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = False
check_untyped_defs = True
disallow_untyped_decorators = True
disallow_any_explicit = True
;disallow_any_generics = True
;disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
# strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
show_error_codes = True


[options.entry_points]
console_scripts =
    leeteasy = leeteasy.__main__:main